# proj-ga-court-reminders

./: .dockerignore  .funcignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  countdown.py  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_azure_functions.yml  functionapp-on-azure.yml
azure_functions/: .funcignore  function_app.py  local.settings.copythis.json
choose-your-own-adventure-demo/: .funcignore  README.md  function_app.py  pyproject.toml  requirements.txt
choose-your-own-adventure-demo/src/court_reminder/: twilio_handler.py
choose-your-own-adventure-demo/src/court_reminder/scenarios/: __init__.py
choose-your-own-adventure-demo/tests/: test_package.py
docs/: architecture.md  data-model.md  message-spec.md  twilio_webhook.md
docs/adr/: 000-template.md  001-use-uv-for-dependency-management.md  002-conversation-state-storage.md  003-message-flow-definition-format.md  004-demo-scenario-data-and-selection.md  005-compute-and-inbound-handling.md  006-daily-check-and-cadence.md
docs/flows/: court_reminder_v1.md  court_reminder_v1.yml
infra/: main.bicep
scripts/: conv_simulation.py  run_azure_tests.py
src/court_reminder/: message_parser.py  message_retriever.py  state.py  twilio_handler.py
src/court_reminder/scenarios/: _utils.py  base.py  home.py  scenario_1.py
tests/: test_message_parser.py  test_scenario_1.py  test_scenario_home.py  test_state.py  test_twilio_handler.py
tests/integration/: test_azure_functions.py  test_twilio_sms.py
tests/integration/local/: test_demo_flow.py
tests/integration/remote/: test_azure_functions.py  test_twilio_sms.py
twilio-countdown-demo/: .template.env  README.md  countdown.py  pyproject.toml
