[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "court-reminder"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0,<1.25",
    "twilio>=9.10.1,<9.11",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
integration = [
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration_local: integration tests that run with no external dependencies",
    "integration_azure: integration tests that require a running Azure Functions host (make func-run)",
    "integration_twilio: integration tests that require Twilio credentials (.env)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/court_reminder"]
