[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "court-reminder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-functions",
    "twilio",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/court_reminder"]
